--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Success
         run: exit 0
+      - run: npm install
       - name: Action
         uses: ./ 
         if: always()
@@ -24,6 +25,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Failure
         run: exit 1
+      - run: npm install
       - name: Action
         uses: ./
         if: always()
